Pruebas unitarias completas Java y Python